# dependency-injection-laces

./: LICENSE  README.md  dependency-injection-laces.cabal  dependency-injection.cabal
src/: Lib.hs
src/DependencyInjection/: Laces.hs
src/DependencyInjection/Laces/: ImpureDynamic.hs
test/: Spec.hs
