name:                dependency-injection-laces
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/dependency-injection#readme
license:             BSD3
license-file:        LICENSE
author:              Dave Hinton
maintainer:          dave_a_hinton@yahoo.co.uk
copyright:           © 2016 Dave Hinton
category:            Dependency Injection
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DependencyInjection.Laces
  build-depends:       base >= 4.7 && < 5
                     , containers == 0.5.*
  default-language:    Haskell2010
  default-extensions:  RecordWildCards
                     , ScopedTypeVariables
                     , KindSignatures
                     , RankNTypes

test-suite dependency-injection-laces-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dependency-injection-laces
                     , transformers
                     , QuickCheck
                     , quickcheck-instances
                     , tasty
                     , tasty-quickcheck
                     , tasty-th
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell
                     , GeneralizedNewtypeDeriving

source-repository head
  type:     git
  location: https://github.com/dave4420/dependency-injection-laces.git
