name:                dependency-injection
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/dependency-injection#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers == 0.5.*
  default-language:    Haskell2010
  default-extensions:  RecordWildCards
                     , ScopedTypeVariables

test-suite dependency-injection-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dependency-injection
                     , QuickCheck
                     , quickcheck-instances
                     , tasty
                     , tasty-quickcheck
                     , tasty-th
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell
                     , GeneralizedNewtypeDeriving

--source-repository head
--  type:     git
--  location: https://github.com/githubuser/dependency-injection
